--- a/CreativeCommonsAmèlia.html
+++ b/CreativeCommonsAmèlia.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="ca">
   <head>
     <meta charset="utf-8">
     <title>Creative Commens Amèlia Lores</title>
     
   </head>
   <body>
-	
-	<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
-		<img alt="Llicència de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
-		<br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Aprentatge fonaments HTML i CSS</span> de 
+	<div> <!-- Aquest div conté el codi que ha generat creativecommons, usa etiquetes obsoletes com "br" i atributs no permesos-->
+		<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+			<img alt="Llicència de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" />
+		</a>
+		<br />
+		<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Aprentatge fonaments HTML i CSS</span> de 
 		<span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Amèlia Lores</span> 
-		està subjecta a una llicència de <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+			està subjecta a una llicència de <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
 			Reconeixement-NoComercial-SenseObraDerivada 4.0 Internacional de Creative Commons</a>
 			<br />Creat a partir d'una obra disponible a 
 			<a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/AmeliaLores" rel="dct:source">https://github.com/AmeliaLores</a>
-	<br>
-	<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Llicència de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Aprentatge fonaments HTML i CSS</span> de <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Amèlia Lores</span> està subjecta a una llicència de <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Reconeixement-NoComercial-SenseObraDerivada 4.0 Internacional de Creative Commons</a><br />Creat a partir d'una obra disponible a <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/AmeliaLores" rel="dct:source">https://github.com/AmeliaLores</a>
+		<br />
+		<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+			<img alt="Llicència de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png" />
+		</a>
+		<br />
+		<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Aprentatge fonaments HTML i CSS</span> de 
+		<span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Amèlia Lores</span> 
+			està subjecta a una llicència de <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+			Reconeixement-NoComercial-SenseObraDerivada 4.0 Internacional de Creative Commons</a>
+			<br />Creat a partir d'una obra disponible a 
+			<a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/AmeliaLores" rel="dct:source">https://github.com/AmeliaLores</a>
+	</div>
 	
 	
+	<!-- Exemple de creativecommons per posar en la nostra web, validada-->
 	<p class="rights">© 2020 @@@ <a href="https://creativecommons.org/choose/">creativecommons</a></p>
 			
-			<p class="rights">
-				<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
-					<img alt="Llicència de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" />
-				</a>
-			</p>
-			<p class="rights">
-				<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Aprentatge fonaments HTML i CSS</span> 
-				de 
-				<span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Amèlia Lores</span> 
-				està subjecta a una llicència de <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
-				Reconeixement-NoComercial-SenseObraDerivada 4.0 Internacional de Creative Commons</a>
-			</p>
-			<p class="rights">Creat a partir d'una obra disponible a 
-				<a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/AmeliaLores" rel="dct:source">https://github.com/AmeliaLores</a>
-			</p>
+	<p class="rights">
+		<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+			<img alt="Llicència de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" />
+		</a>
+	</p>
+	<p class="rights">
+		<span property="dct:title">Aprentatge fonaments HTML i CSS</span> 
+		de 
+		<span property="cc:attributionName">Amèlia Lores</span> 
+		està subjecta a una llicència de <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+		Reconeixement-NoComercial-SenseObraDerivada 4.0 Internacional de Creative Commons</a>
+	</p>
+	<p class="rights">Creat a partir d'una obra disponible a 
+		<a href="https://github.com/AmeliaLores" rel="dct:source">https://github.com/AmeliaLores</a>
+	</p>
   </body>
 </html>
